--- a/api_specification.yaml
+++ b/api_specification.yaml
@@ -1,3 +1,4 @@
+#TODO: change the first section (info - host - tags) from petstore to bookstore
 swagger: "2.0"
 info:
   description: "This is a sample server Petstore server.  You can find out more about     Swagger at [http://swagger.io](http://swagger.io) or on [irc.freenode.net, #swagger](http://swagger.io/irc/).      For this sample, you can use the api key `special-key` to test the authorization     filters."
@@ -29,5 +30,156 @@ schemes:
 - "http"
 paths:
   /books:
+    get:
+      tags:
+      - "book"
+      summary: "Books available in the inventory"
+      description: "List of books available in the inventory"
+      operationId: "booksGET"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "offset"
+        in: "query"
+        description: "Pagination offset. Default is 0."
+        required: false
+        type: "integer"
+      - name: "limit"
+        in: "query"
+        description: "Maximum number of items per page. Default is 20 and cannot exceed 500."
+        required: false
+        type: "integer"
+      responses:
+        200:
+          description: "A collection of Books"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/Book"
+        404:
+          description: "Unexpected error"
+      x-swagger-router-controller: "Book"
+  /books/{bookId}:
+    get:
+      tags:
+      - "book"
+      summary: "Find book by ID"
+      description: "Returns a book"
+      operationId: "getBookById"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "bookId"
+        in: "path"
+        description: "ID of book to return"
+        required: true
+        type: "integer"
+        format: "int64"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/Book"
+        400:
+          description: "Invalid ID supplied"
+        404:
+          description: "Book not found"
+      x-swagger-router-controller: "Book"
+  /books/findByName:
+    get:
+      tags:
+      - "book"
+      summary: "Find books by name"
+      description: "Return a list of books"
+      operationId: "getBooksByName"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "bookName"
+        in: "query"
+        description: "Name of the book"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/Book"
   /user:
   /cart:
+
+definitions:
+  Book:
+    type: "object"
+    required:
+    - "author"
+    - "price"
+    - "title"
+    properties:
+      id:
+        type: "integer"
+        format: "int64"
+      title:
+        type: "string"
+      author:
+        type: "string"
+      price:
+        $ref: "#/definitions/Amount"
+      status:
+        type: "string"
+        description: "book availability in the inventory"
+        enum:
+        - "available"
+        - "out of stock"
+    title: "Book"
+    description: "A book for sale in the store"
+    example:
+      id: 0
+      title: "Il deserto dei tartari"
+      author: "Dino Buzzati"
+      price:
+        value: 10
+        currency: "eur"
+      status: "available"
+  Amount:
+    type: "object"
+    required:
+    - "currency"
+    - "value"
+    properties:
+      value:
+        type: "number"
+        format: "double"
+        minimum: 0.01
+        maximum: 1000
+      currency:
+        $ref: "#/definitions/Currency"
+    description: "Price\n"
+    example:
+      currency: "eur"
+      value: 11
+  Currency:
+    type: "string"
+    pattern: "^[A-Z]{3,3}$"
+    description: "some description\n"
+    example: "eur"
+  User:
+    type: "object"
+    properties:
+      id:
+        type: "integer"
+      name:
+        type: "string"
+      address:
+        type: "string"
+      creditcard:
+        type: "string"
+    title: "User"
+    description: "A user"
+    example:
+      id: 1
+      name: "Vittorio"
+      address: "DEIB"
+      creditcard: "xyzabc"
