--- a/api_specification.yaml
+++ b/api_specification.yaml
@@ -158,6 +158,45 @@ paths:
               $ref: "#/definitions/Book"
         404:
           description: "Book not found"
+  /store/order:
+    post:
+      tags:
+      - "store"
+      summary: "Place an order for some books"
+      operationId: "orderPOST"
+      consumes:
+      - "application/json"
+      parameters:
+      - name: "body"
+        in: "body"
+        required: true
+        schema:
+          type: "object"
+          required:
+          - "BookIDs"
+          - "OrderID"
+          - "UserID"
+          properties:
+            OrderID:
+              type: "integer"
+              description: "The id of the order"
+            UserID:
+              type: "integer"
+              description: "The id of the user that placed the order"
+            BookIDs:
+              type: "array"
+              description: "The ids of the books in the order"
+              items:
+                type: "integer"
+          description: "The details for the order"
+        x-examples:
+          application/json: "{\n  \"OrderID\": 0,\n  \"UserID\"; 0,\n  \"BookIDs\"\
+            : [\n  0,1,2\n  ]\n}"
+      responses:
+        200:
+          description: "Order placed"
+        400:
+          description: "Wrong IDs"
 definitions:
   Book:
     type: "object"
@@ -228,3 +267,29 @@ definitions:
       name: "Vittorio"
       address: "DEIB"
       creditcard: "xyzabc"
+  Order:
+    type: "object"
+    required:
+    - "Books"
+    - "OrderID"
+    - "User"
+    properties:
+      OrderID:
+        type: "integer"
+        description: "The identifier of the order"
+      User:
+        $ref: "#/definitions/User"
+      Books:
+        type: "array"
+        description: "The list of books ordered"
+        items:
+          $ref: "#/definitions/Book"
+    description: "An order for some books"
+    example: "{\n  \"OrderID\": 123456789,\n  \"User\": {\n  \"id\": 1,\n  \"name\"\
+      : \"Vittorio\",\n  \"address\": \"DEIB\",\n  \"creditcard\": \"xyzabc\"\n  }\n\
+      \  \"Books\": [\n  {\n  \"id\": 0,\n  \"title\": \"Il deserto dei tartari\"\
+      ,\n  \"author\": \"Dino Buzzati\",\n  \"price\": {\n    \"value\": 10,\n   \
+      \ \"currency\": \"eur\"\n  },\n  \"status\": \"available\"\n},\n{\n  \"id\"\
+      : 1,\n  \"title\": \"Il deserto dei tartari\",\n  \"author\": \"Dino Buzzati\"\
+      ,\n  \"price\": {\n    \"value\": 10,\n    \"currency\": \"eur\"\n  },\n  \"\
+      status\": \"available\"\n}\n  ]\n}"
