--- a/yaml/api_specification.yaml
+++ b/yaml/api_specification.yaml
@@ -10,7 +10,7 @@ info:
   license:
     name: "Apache 2.0"
     url: "http://www.apache.org/licenses/LICENSE-2.0.html"
-host: "localhost"
+host: "bobooky.herokuapp.com"
 basePath: "/api"
 schemes:
 - "https"
